--- a/Casual/.vscode/tasks.json
+++ b/Casual/.vscode/tasks.json
@@ -3,7 +3,7 @@
         {
             "type": "shell",
             "label": "gcc.exe build active file",
-            "command": "C:\\Program Files (x86)\\mingw-w64\\i686-8.1.0-posix-dwarf-rt_v6-rev0\\mingw32\\bin\\gcc.exe",
+            "command": "C:\\Program Files\\MinGW\\bin\\gcc.exe",
             "args": [
                 "-g",
                 "${file}",
@@ -11,7 +11,7 @@
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
             "options": {
-                "cwd": "C:\\Program Files (x86)\\mingw-w64\\i686-8.1.0-posix-dwarf-rt_v6-rev0\\mingw32\\bin"
+                "cwd": "C:\\Program Files\\MinGW\\bin"
             }
         }
     ],
